<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testme">TestMe</string>
    <string name="user_authentica">   USER AUTHENTICA   </string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="login_instruction">Enter your email address and</string>
    <string name="login_instruction_two">password to access your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="need_account">Dont\'t have an account?</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="mobile">Enter mobile number</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="have_account">Already have an account?</string>
    <string name="profile">Profile</string>
    <string name="phone">Phone</string>
    <string name="creted_date">Creation Date</string>
    <string name="user">User</string>
    <string name="exit">Exit</string>
    <string name="user_list">Users List</string>
    <string name="total_users">Total Users</string>
    <string name="total_value">Total Value</string>
    <string name="add_user">Add New User</string>
    <string name="search">Search</string>
    <string name="save">save</string>
    <string name="remove">remove</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">cancel</string>
    <string name="confirm">Confirm</string>

    <style name="hint">#CD708295</style>
</resources>