<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.silverblaze.myapplication.ui.fragments.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".ui.fragments.auth.RegistrationFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/back"
                android:textColor="@color/back" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtn" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:padding="5dp"
                    android:src="@drawable/login_background"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="1dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/camera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom|left"
                    android:background="@drawable/round_shape"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="1dp" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                android:textColorHint="#CD708295"
                app:boxStrokeWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_field_background"
                    android:text="@={viewModel.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:textColorHint="#CD708295"
                app:boxStrokeWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailField"
                    android:text="@={viewModel.email}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_field_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:textColorHint="#CD708295"
                app:boxStrokeWidth="0dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordField"
                    android:text="@={viewModel.password}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_field_background"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile"
                android:textColorHint="#CD708295"
                app:boxStrokeWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobileField"
                    android:text="@={viewModel.mobile}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_field_background" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:id="@+id/GenderLinerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/male"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
                <RadioButton
                    android:checked="@={viewModel.isMale}"
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <TextView
                    android:layout_marginLeft="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/female"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
                <RadioButton
                    android:checked="@={viewModel.isFemale}"
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/box_shape"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GenderLinerLayout" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/goToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="@color/back"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>